src/libqlistwidget.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QListWidgetItem__ItemType
{
	Type = 0,
	UserType = 1000,
}
public struct QListWidgetItem
{
	[LinkName("QListWidgetItem_new")]
	public static extern void* QListWidgetItem_new();
	[LinkName("QListWidgetItem_new2")]
	public static extern void* QListWidgetItem_new2(char8[] text);
	[LinkName("QListWidgetItem_new3")]
	public static extern void* QListWidgetItem_new3(QIcon icon, char8[] text);
	[LinkName("QListWidgetItem_new4")]
	public static extern void* QListWidgetItem_new4(QListWidgetItem other);
	[LinkName("QListWidgetItem_new5")]
	public static extern void* QListWidgetItem_new5(QListWidget listview);
	[LinkName("QListWidgetItem_new6")]
	public static extern void* QListWidgetItem_new6(QListWidget listview, int32 typeVal);
	[LinkName("QListWidgetItem_new7")]
	public static extern void* QListWidgetItem_new7(char8[] text, QListWidget listview);
	[LinkName("QListWidgetItem_new8")]
	public static extern void* QListWidgetItem_new8(char8[] text, QListWidget listview, int32 typeVal);
	[LinkName("QListWidgetItem_new9")]
	public static extern void* QListWidgetItem_new9(QIcon icon, char8[] text, QListWidget listview);
	[LinkName("QListWidgetItem_new10")]
	public static extern void* QListWidgetItem_new10(QIcon icon, char8[] text, QListWidget listview, int32 typeVal);
	[LinkName("QListWidgetItem_Clone")]
	public static extern QListWidgetItem QListWidgetItem_Clone(void* c_this);
	[LinkName("QListWidgetItem_ListWidget")]
	public static extern QListWidget QListWidgetItem_ListWidget(void* c_this);
	[LinkName("QListWidgetItem_SetSelected")]
	public static extern void QListWidgetItem_SetSelected(void* c_this, bool selectVal);
	[LinkName("QListWidgetItem_IsSelected")]
	public static extern bool QListWidgetItem_IsSelected(void* c_this);
	[LinkName("QListWidgetItem_SetHidden")]
	public static extern void QListWidgetItem_SetHidden(void* c_this, bool hide);
	[LinkName("QListWidgetItem_IsHidden")]
	public static extern bool QListWidgetItem_IsHidden(void* c_this);
	[LinkName("QListWidgetItem_Flags")]
	public static extern int64 QListWidgetItem_Flags(void* c_this);
	[LinkName("QListWidgetItem_SetFlags")]
	public static extern void QListWidgetItem_SetFlags(void* c_this, int64 flags);
	[LinkName("QListWidgetItem_Text")]
	public static extern char8[] QListWidgetItem_Text(void* c_this);
	[LinkName("QListWidgetItem_SetText")]
	public static extern void QListWidgetItem_SetText(void* c_this, char8[] text);
	[LinkName("QListWidgetItem_Icon")]
	public static extern QIcon QListWidgetItem_Icon(void* c_this);
	[LinkName("QListWidgetItem_SetIcon")]
	public static extern void QListWidgetItem_SetIcon(void* c_this, QIcon icon);
	[LinkName("QListWidgetItem_StatusTip")]
	public static extern char8[] QListWidgetItem_StatusTip(void* c_this);
	[LinkName("QListWidgetItem_SetStatusTip")]
	public static extern void QListWidgetItem_SetStatusTip(void* c_this, char8[] statusTip);
	[LinkName("QListWidgetItem_ToolTip")]
	public static extern char8[] QListWidgetItem_ToolTip(void* c_this);
	[LinkName("QListWidgetItem_SetToolTip")]
	public static extern void QListWidgetItem_SetToolTip(void* c_this, char8[] toolTip);
	[LinkName("QListWidgetItem_WhatsThis")]
	public static extern char8[] QListWidgetItem_WhatsThis(void* c_this);
	[LinkName("QListWidgetItem_SetWhatsThis")]
	public static extern void QListWidgetItem_SetWhatsThis(void* c_this, char8[] whatsThis);
	[LinkName("QListWidgetItem_Font")]
	public static extern QFont QListWidgetItem_Font(void* c_this);
	[LinkName("QListWidgetItem_SetFont")]
	public static extern void QListWidgetItem_SetFont(void* c_this, QFont font);
	[LinkName("QListWidgetItem_TextAlignment")]
	public static extern int32 QListWidgetItem_TextAlignment(void* c_this);
	[LinkName("QListWidgetItem_SetTextAlignment")]
	public static extern void QListWidgetItem_SetTextAlignment(void* c_this, int32 alignment);
	[LinkName("QListWidgetItem_SetTextAlignmentWithAlignment")]
	public static extern void QListWidgetItem_SetTextAlignmentWithAlignment(void* c_this, int64 alignment);
	[LinkName("QListWidgetItem_SetTextAlignment2")]
	public static extern void QListWidgetItem_SetTextAlignment2(void* c_this, int64 alignment);
	[LinkName("QListWidgetItem_Background")]
	public static extern QBrush QListWidgetItem_Background(void* c_this);
	[LinkName("QListWidgetItem_SetBackground")]
	public static extern void QListWidgetItem_SetBackground(void* c_this, QBrush brush);
	[LinkName("QListWidgetItem_Foreground")]
	public static extern QBrush QListWidgetItem_Foreground(void* c_this);
	[LinkName("QListWidgetItem_SetForeground")]
	public static extern void QListWidgetItem_SetForeground(void* c_this, QBrush brush);
	[LinkName("QListWidgetItem_CheckState")]
	public static extern int64 QListWidgetItem_CheckState(void* c_this);
	[LinkName("QListWidgetItem_SetCheckState")]
	public static extern void QListWidgetItem_SetCheckState(void* c_this, int64 state);
	[LinkName("QListWidgetItem_SizeHint")]
	public static extern QSize QListWidgetItem_SizeHint(void* c_this);
	[LinkName("QListWidgetItem_SetSizeHint")]
	public static extern void QListWidgetItem_SetSizeHint(void* c_this, QSize size);
	[LinkName("QListWidgetItem_Data")]
	public static extern QVariant QListWidgetItem_Data(void* c_this, int32 role);
	[LinkName("QListWidgetItem_SetData")]
	public static extern void QListWidgetItem_SetData(void* c_this, int32 role, QVariant value);
	[LinkName("QListWidgetItem_OperatorLesser")]
	public static extern bool QListWidgetItem_OperatorLesser(void* c_this, QListWidgetItem other);
	[LinkName("QListWidgetItem_Read")]
	public static extern void QListWidgetItem_Read(void* c_this, QDataStream _in);
	[LinkName("QListWidgetItem_Write")]
	public static extern void QListWidgetItem_Write(void* c_this, QDataStream _out);
	[LinkName("QListWidgetItem_OperatorAssign")]
	public static extern void QListWidgetItem_OperatorAssign(void* c_this, QListWidgetItem other);
	[LinkName("QListWidgetItem_Type")]
	public static extern int32 QListWidgetItem_Type(void* c_this);
}
